# pytest-odoo

./: pyproject.toml
src/: pytest_odoo.py
