[project]
name = "pytest-odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.1",
    # "odoo", "psycopg2", "appdirs",
]

classifiers = [
    "Framework :: Pytest",
]

[project.entry-points.pytest11]
pytest_odoo = "pytest_odoo"

[tool.ruff]
target-version = "py310"
line-length = 100

format.quote-style = "preserve"
format.skip-magic-trailing-comma = true
